# django-version-field

./: .gitignore  .pre-commit-config.yaml  README.md  dev.py  pyproject.toml  runtests.py
.github/: runtests.yml
.github/workflows/: build.yml  runtests.yml  test.yml
django_version_field/: __init__.py  field.py
tests/: admin.py  data.py  models.py  settings.py  test_params.py  tests.py  urls.py
