[tool.poetry]
name = "django-version-field"
version = "0.2.0"
description = "A field to handle versions in Django models"
authors = [
    "Ganesh Del Grosso <ganesh@situation.sh>",
    "Alban Siffer <31479857+asiffer@users.noreply.github.com>",
]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
Django = ">=5"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"

[tool.black]
line-length = 79
target-version = ['py312']


[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
